[workspace]
members = [
  "isla-lib",
  "isla-cat",
  "isla-axiomatic"
]
exclude = [
  "web/server"
]

[package]
name = "isla"
version = "0.1.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2018"
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications.
"""

[[bin]]
name = "isla-property"
path = "src/property.rs"

[[bin]]
name = "isla-property129"
path = "src/property129.rs"

[[bin]]
name = "isla-footprint"
path = "src/footprint.rs"

[[bin]]
name = "isla-client"
path = "src/client.rs"

[[bin]]
name = "isla-preprocess"
path = "src/preprocess.rs"

[[bin]]
name = "isla-axiomatic"
path = "src/axiomatic.rs"

[dependencies]
crossbeam = "0.7.3"
getopts = "0.2.21"
num_cpus = "1.10.1"
toml = "0.5.5"
serde = "1.0.104"
bincode = "1.2.1"
sha2 = "0.8.1"
rand = "0.7.3"
isla-axiomatic = { path = "isla-axiomatic", version = "0.1.0" }
isla-cat = { path = "isla-cat", version = "0.1.0" }
isla-lib = { path = "isla-lib", version = "0.1.0" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = "abort"
debug = true
