[workspace]
members = [
  "isla-lib",
  "isla-cat",
  "isla-mml",
  "isla-sexp",
  "isla-elf",
  "isla-axiomatic",
]
exclude = [
  "web/server"
]

[package]
name = "isla"
version = "0.2.0"
rust-version = "1.65"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications.
"""

[[bin]]
name = "isla-property"
path = "src/property.rs"
doc = false

[[bin]]
name = "isla-property129"
path = "src/property129.rs"
doc = false

[[bin]]
name = "isla-footprint"
path = "src/footprint.rs"
doc = false

[[bin]]
name = "isla-client"
path = "src/client.rs"
doc = false

[[bin]]
name = "isla-litmus-dump"
path = "src/litmus-dump.rs"
doc = false

[[bin]]
name = "isla-preprocess"
path = "src/preprocess.rs"
doc = false

[[bin]]
name = "isla-preprocess129"
path = "src/preprocess129.rs"
doc = false

[[bin]]
name = "isla-axiomatic"
path = "src/axiomatic.rs"
doc = false

[[bin]]
name = "isla-execute-function"
path = "src/execute-function.rs"
doc = false

[[bin]]
name = "zencode"
path = "src/zencode.rs"
doc = false

[dependencies]
crossbeam = "0.8.1"
getopts = "0.2.21"
toml = "0.5.5"
pretty = "0.11.3"
serde = "1.0.104"
bincode = "1.2.1"
sha2 = "0.8.1"
rand = "0.7.3"
id-arena = "2"
isla-axiomatic = { path = "isla-axiomatic", version = "0.2.0" }
isla-cat = { path = "isla-cat", version = "0.2.0" }
isla-mml = { path = "isla-mml", version = "0.2.0" }
isla-lib = { path = "isla-lib", version = "0.2.0" }
isla-elf = { path = "isla-elf", version = "0.2.0" }

[features]
smtperf = ["isla-lib/smtperf"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
debug = true
