[package]
name = "isla-axiomatic"
version = "0.1.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2018"
license = "MIT"
build = "build.rs"

[features]
sandbox = []

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
serde = "1.0.104"
crossbeam = "0.7.3"
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"
toml = "0.5.5"
goblin = "0.2.1"
regex = "1.3.1"
isla-cat = { path = "../isla-cat" }
isla-lib = { path = "../isla-lib" }
