[package]
name = "isla-axiomatic"
version = "0.2.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2021"
license = "BSD-2-Clause"
build = "build.rs"
readme = "../README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications. This crate implements utilities for
handling axiomatic memory models.
"""

[features]
sandbox = []

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
ahash = "0.8.11"
serde = "1.0.104"
crossbeam = "0.8.1"
lalrpop-util = "0.20.2"
lazy_static = "1.4.0"
toml = "0.5.5"
goblin = "0.4.3"
regex = "1.3.1"
isla-cat = { path = "../isla-cat", version = "0.2.0" }
isla-mml = { path = "../isla-mml", version = "0.2.0" }
isla-sexp = { path = "../isla-sexp", version = "0.2.0" }
isla-lib = { path = "../isla-lib", version = "0.2.0" }
