[package]
name = "isla-cat"
version = "0.1.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2018"
license = "BSD-2-Clause"
build = "build.rs"
readme = "README.md"

[lib]
name = "isla_cat"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
regex = "1.3.1"
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"
