[package]
name = "isla-cat"
version = "0.2.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2021"
license = "BSD-2-Clause"
build = "build.rs"
readme = "README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications. This crate implements a SMT translator
for subset of the cat language used by herd7 to specify relaxed memory
models.
"""

[lib]
name = "isla_cat"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
regex = "1.3.1"
lalrpop-util = "0.20.2"
lazy_static = "1.4.0"
