[package]
name = "isla-elf"
version = "0.2.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2021"
license = "BSD-2-Clause"
readme = "../README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications. This crate implements utilities
for interactive with elf binaries.
"""

[dependencies]
goblin = "0.4.3"
gimli = "0.26.1"
lazy_static = "1.4.0"
isla-lib = { path = "../isla-lib", version = "0.2.0" }
