[package]
name = "isla-lib"
version = "0.1.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2018"
license = "MIT"
build = "build.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
regex = "1.3.1"
lalrpop-util = "0.17.2"
crossbeam = "0.7.3"
getopts = "0.2.21"
lazy_static = "1.4.0"
toml = "0.5.5"
z3-sys = "0.5.0"
libc = "0.2.5"
goblin = "0.1"
