[package]
name = "isla-lib"
version = "0.2.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2018"
license = "BSD-2-Clause"
build = "build.rs"
readme = "../README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications. This crate implements the core symbolic
execution engine as a library.
"""

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
regex = "1.3.1"
lalrpop-util = "0.19.0"
crossbeam = "0.7.3"
lazy_static = "1.4.0"
toml = "0.5.5"
z3-sys = "0.5.0"
libc = "0.2.5"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
sha2 = "0.8.1"
petgraph = "0.5.0"
