[package]
name = "isla-lib"
version = "0.2.0"
authors = ["Alasdair <alasdair.armstrong@cl.cam.ac.uk>"]
edition = "2021"
license = "BSD-2-Clause"
build = "build.rs"
readme = "../README.md"
homepage = "https://github.com/rems-project/isla"
repository = "https://github.com/rems-project/isla"
description = """
Isla is a symbolic execution engine for Sail instruction set
architecture specifications. This crate implements the core symbolic
execution engine as a library.
"""

[features]
smtperf = []

[build-dependencies]
lalrpop = { version = "0.20.2", features = ["lexer"] }

[dependencies]
ahash = "0.8.11"
regex = "1.3.1"
lexgen = "0.15.0"
lexgen_util = "0.15.0"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
crossbeam = "0.8.1"
lazy_static = "1.4.0"
toml = "0.5.5"
z3-sys = "0.5.0"
libc = "0.2.5"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
sha2 = "0.8.1"
petgraph = "0.5.0"
num-traits = "0.2"
num-bigint = "0.4"
