(library
  (name herd)
  (wrapped false)
  (modules_without_implementation
    aST
    answer
    archBase
    arch_litmus
    cAst
    constant
    emitPrintf
    fmt
    name
    outTests
    pPMode
    pseudoAbstract
    scalar
    sign
    target))

(env
  (dev
    (flags (:standard -w -9 -w -27 -w -34 -w -33))))

(ocamlyacc
  scopeParser
  stateParser)

(ocamllex
  lexHint
  lexSplit
  showcode
  lexFmt
  lexOutMapping
  lexUtils
  runTypeUtils
  splitter
  scopeLexer
  stateLexer)
