(library
  (name herd)
  (wrapped false)
  (modules_without_implementation
    archBase
    arch_litmus
    constant
    name
    pPMode
    scalar
    target))

(env
  (dev
    (flags (:standard -w -9 -w -27 -w -34 -w -33))))

(ocamlyacc stateParser)

(ocamllex
  lexOutMapping
  lexUtils
  splitter
  stateLexer)
